--- a/app/src/main/res/values-km/strings.xml
+++ b/app/src/main/res/values-km/strings.xml
@@ -5,16 +5,17 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_login2">Sign in</string>
-    <string name="username">USERNAME</string>
-    <string name="sign_up">Sign Up</string>
-    <string name="phone_number">Phone Number</string>
-    <string name="Password">Password</string>
+    <string name="action_settings">ការកំណត់</string>
+    <string name="title_activity_login2">ចូល</string>
+    <string name="username">ឈ្មោះ</string>
+    <string name="sign_up">ចុះឈ្មោះ</string>
+    <string name="phone_number">លេចទុរស័ព្ទ</string>
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
+    <string name="prompt_email">អ៊ីម៉ែល</string>
+    <string name="Password">លេចសំងាត់</string>
+    <string name="action_sign_in">
+ចូលឬចុះឈ្មោះ</string>
+    <string name="action_sign_in_short">ចូល</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
