--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">DerLengBeta</string>
     <string name="title_activity_navigation">activity_navigation</string>
@@ -7,10 +8,12 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_login2">Sign in</string>
-
+    <string name="username">USERNAME</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="prompt_password">Password</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
@@ -20,5 +23,8 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="title_activity_sign_in_actiivty">Sign in</string>
+
+    <string name="facebook_app_id">992889717588834</string>
+    <string name="fb_login_protocol_scheme">fb992889717588834</string>
+
 </resources>
